Added more Tests and completed all handlers
