# models/find_loans_params.go
@@ -1,0 +1,62 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+)
+
+// FindLoansParams find loans params
+//
+// swagger:model FindLoansParams
+type FindLoansParams struct {
+
+	// limit
+	Limit string `json:"limit,omitempty"`
+
+	// page
+	Page string `json:"page,omitempty"`
+
+	// sort
+	Sort string `json:"sort,omitempty"`
+
+	// state
+	State string `json:"state,omitempty"`
+
+	// user Id
+	UserID string `json:"userId,omitempty"`
+}
+
+// Validate validates this find loans params
+func (m *FindLoansParams) Validate(formats strfmt.Registry) error {
+	return nil
+}
+
+// ContextValidate validates this find loans params based on context it is used
+func (m *FindLoansParams) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *FindLoansParams) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *FindLoansParams) UnmarshalBinary(b []byte) error {
+	var res FindLoansParams
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
